<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.lucas.lucasvanberkel_pset1.MainActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/pics">


        <ImageView
            android:contentDescription="@string/body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/body"
            android:visibility="visible"
            android:id="@+id/body"/>

        <ImageView
            android:contentDescription="@string/arms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arms"
            android:visibility="invisible"
            android:id="@+id/arms"/>

        <ImageView
            android:contentDescription="@string/ears"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ears"
            android:visibility="invisible"
            android:id="@+id/ears"/>

        <ImageView
            android:contentDescription="@string/eyebrows"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/eyebrows"
            android:visibility="visible"
            android:id="@+id/eyebrows"/>

        <ImageView
            android:contentDescription="@string/eyes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/eyes"
            android:visibility="visible"
            android:id="@+id/eyes"/>

        <ImageView
            android:contentDescription="@string/glasses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/glasses"
            android:visibility="visible"
            android:id="@+id/glasses"/>

        <ImageView
            android:contentDescription="@string/hat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/hat"
            android:visibility="visible"
            android:id="@+id/hat"/>

        <ImageView
            android:contentDescription="@string/mouth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/mouth"
            android:visibility="visible"
            android:id="@+id/mouth"/>

        <ImageView
            android:contentDescription="@string/moustache"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/mustache"
            android:visibility="visible"
            android:id="@+id/mustache"/>

        <ImageView
            android:contentDescription="@string/nose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/nose"
            android:visibility="visible"
            android:id="@+id/nose"/>

        <ImageView
            android:contentDescription="@string/shoes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/shoes"
            android:visibility="visible"
            android:id="@+id/shoes"/>
    </RelativeLayout>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:stretchColumns="1">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <CheckBox
                android:text="@string/body"
                android:id="@+id/BodyBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"
                android:checked="true"
                />

            <CheckBox
                android:text="@string/arms"
                android:id="@+id/ArmsBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
                android:layout_gravity="end"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <CheckBox
                android:text="@string/ears"
                android:id="@+id/EarsBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <CheckBox
                android:text="@string/eyebrows"
                android:id="@+id/EyebrowsBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
                android:layout_gravity="end"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <CheckBox
                android:text="@string/eyes"
                android:id="@+id/EyesBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <CheckBox
                android:text="@string/glasses"
                android:id="@+id/GlassesBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
                android:layout_gravity="end"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <CheckBox
                android:text="@string/hat"
                android:id="@+id/HatBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <CheckBox
                android:text="@string/mouth"
                android:id="@+id/MouthBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
                android:layout_gravity="end"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <CheckBox
                android:text="@string/moustache"
                android:id="@+id/MustacheBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <CheckBox
                android:text="@string/nose"
                android:id="@+id/NoseBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
                android:layout_gravity="end"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <CheckBox
                android:text="@string/shoes"
                android:id="@+id/ShoesBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </TableRow>
    </TableLayout>
</RelativeLayout>
